# lightingbi

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
basic/: Cargo.toml
components/chart/: Cargo.toml
components/chart/src/: lib.rs
components/connectors/connector_craits/: Cargo.toml
components/connectors/connector_craits/src/: file_connecotr.rs  lib.rs
components/connectors/csv/: Cargo.toml
components/connectors/csv/src/: lib.rs
components/connectors/csv/tests/: user_result.csv
components/connectors/excel/: Cargo.toml
components/connectors/excel/src/: lib.rs
components/connectors/excel/tests/: test.xlsx
components/data_assemble/: Cargo.toml
components/data_assemble/src/: lib.rs
components/dataset/: .env  Cargo.toml
components/dataset/src/: dataset.rs  lib.rs
components/formula/: .env  Cargo.toml
components/formula/src/: formula_engine.rs  formula_function_default.rs  formula_node.rs  lib.rs  neo4j_session.rs
components/graphql/: Cargo.toml
components/graphql/src/: handler.rs  lib.rs  query_dataset.rs  query_formula.rs  query_root.rs  query_user.rs
components/user/: .env  Cargo.toml  sqlx-data.json
components/user/src/: lib.rs  models.rs  schema.sql
components/user/src/models/: human.rs  mod.rs  user.rs
core/: Cargo.toml
core/src/: compute_test.rs  lib.rs  tokio_test.rs  workpool.rs
craits/crud_crait/: Cargo.toml
craits/crud_crait/src/: entity.rs  lib.rs  repository.rs
craits/engine_crait/: Cargo.toml
craits/engine_crait/src/: engine.rs  lib.rs
craits/util_crait/: Cargo.toml
craits/util_crait/src/: lib.rs  uuid_util.rs
dsl/: Cargo.toml
dsl/src/: lib.rs  query.rs
engine/clickhouse/: Cargo.toml
engine/clickhouse/src/: lib.rs
engine/engine_crait/: Cargo.toml
engine/engine_crait/src/: engine.rs  lib.rs
engine_crait/src/: engine.rs
engine_craits/: Cargo.toml
engine_craits/src/: engine.rs
engines/clickhouse/: Cargo.toml
engines/clickhouse/src/: lib.rs
graphql/: Cargo.toml
graphql/src/: lib.rs
query/: Cargo.toml
query/src/: lib.rs  query_builder.rs
server/: Cargo.toml  appconfig.rs  main.rs
server/handler/: default.rs  user_tag.rs
server/static/: package.json
src/: init_config.rs  lib.rs  schema.sql
src/graphql/: mod.rs  query_root.rs
src/handler/: default.rs  graphql.rs  mod.rs  query.rs  user_tag.rs
