[package]
name = "core"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
tokio = { version = "1.3", features = ["full"]}
dashmap = "4.0.2"
neo4rs = "0.3.9"
async-trait = "0.1.48"
futures = "0.3.14"
eval = "0.4.3"