[package]
name = "graphql"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "mysql","runtime-tokio-rustls" ] }
#juniper = "0.14.2"
#juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }