[package]
name = "server"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "lightingbi"
path = "main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
json = "0.12"