[package]
name = "data_assemble"
version = "0.1.0"
authors = ["ksy <13437280321@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "= 0.5.3"
tokio = { version = "1.3", features = ["full"]}
async-trait = "0.1.48"
futures = { version = "0.3.8" }
uuid = { version = "0.8", features = ["v4"] }