[package]
name = "dataset"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.48"
async-graphql = { git = "https://github.com/nauu/async-graphql.git", rev = "cabe7808b5357c33873e5dc51dfd617e7b810ec5"}
async-graphql-warp = { git = "https://github.com/nauu/async-graphql.git", rev = "cabe7808b5357c33873e5dc51dfd617e7b810ec5"}
sqlx = { version = "0.5.2", features = [ "mysql","runtime-tokio-rustls" ] }
tokio = { version = "1.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"


engine_craits = { path = "../../craits/engine_crait", version = "0.1.0"}
crud_crait = { path = "../../craits/crud_crait", version = "0.1.0"}
util_crait = { path = "../../craits/util_crait", version = "0.1.0"}
