[package]
name = "formula"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.7.3"
evalexpr = "5.0.5"
dotenv = "0.15.0"
tokio = { version = "0.2.25", features = ["full"]}
neo4rs = "0.3.5"
async-trait = "0.1.48"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
regex = "1.4.5"
serde_json = "1.0.64"
anyhow = "1.0.28"

util_crait = { path = "../../craits/util_crait", version = "0.1.0"}