[package]
name = "formula"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "5.0.5"
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"]}
neo4rs = "0.5.8"
async-trait = "0.1.48"
futures = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
regex = "1.4.5"
lazy_static = "1.1.1"
serde_json = "1.0.64"
async-graphql = { git = "https://gitee.com/nauu/async-graphql.git", rev = "5e58ebfe0098a542919ad0300e3d317b56fc08bd"}
async-graphql-warp = { git = "https://gitee.com/nauu/async-graphql.git", rev = "5e58ebfe0098a542919ad0300e3d317b56fc08bd"}

util_crait = { path = "../../craits/util_crait", version = "0.1.0"}