[package]
name = "graphql"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
async-graphql = { git = "https://github.com/nauu/async-graphql.git", rev = "cabe7808b5357c33873e5dc51dfd617e7b810ec5"}
async-graphql-warp = { git = "https://github.com/nauu/async-graphql.git", rev = "cabe7808b5357c33873e5dc51dfd617e7b810ec5"}
sqlx = { version = "0.5.2", features = [ "mysql","runtime-tokio-rustls" ] }
neo4rs = "0.5.8"

user = {path = "../user",version = "0.1.0"}
dataset = {path = "../dataset",version = "0.1.0"}
crud_crait = {path = "../../craits/crud_crait",version = "0.1.0"}
formula = {path = "../formula",version = "0.1.0"}
