[package]
name = "crud_crait"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.48"
sqlx = { version = "0.4.2", features = [ "mysql","runtime-tokio-native-tls", "offline"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
tokio = { version = "0.2.25", features = ["full"]}