[package]
name = "crud_crait"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
async-trait = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
async-graphql = { git = "https://gitee.com/nauu/async-graphql.git", rev = "5e58ebfe0098a542919ad0300e3d317b56fc08bd"}
sqlx = { version = "0.5.2", features = [ "mysql","runtime-tokio-rustls" ] }
tokio = { version = "1.0", features = ["full"]}