[package]
name = "csv_connector"
version = "0.1.0"
authors = ["zhukai <zhukai@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"


connector_craits = {path = "../connector_craits", version = "0.1.0"}